--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,17 @@ python = "3.11.4"
 pandas = "2.2.2"
 jupyterlab = "4.2.3"
 scikit-learn = "1.5.1"
+downcast = "^0.0.8"
+plotly-express = "^0.4.1"
+matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
+category-encoders = "^2.6.3"
+joblib = "^1.4.2"
+xgboost = "^2.1.1"
+lightgbm = "^4.5.0"
+prophet = "1.1.5"
+numpy = "2.1.1"
+starlette = "^0.39.2"
 
 
 [build-system]
